[package]
name = "docker-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
console = "0.15"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
git2 = "0.18"
ctrlc = "3.4"
clap = { version = "4.4", features = ["derive"] }
